feat: write authentication and user endpoints
Closes #8
