# endpoints/main.go
@@ -18,6 +18,12 @@
 //   Produces:
 //   - application/json
 //
+//   SecurityDefinitions:
+//     - Bearer:
+//         type: apiKey
+//         name: Authorization
+//         in: header
+//
 // swagger:meta
 package endpoints
 
