# endpoints/vehicle.go
@@ -188,6 +188,8 @@ type CreateNewVehicleParams struct {
 // swagger:route POST /vehicle/ Vehicles CreateNewVehicle
 // Create a new vehicle record.
 //
+//   Security:
+//       Bearer:
 //
 //   Responses:
 //     default: ErrorMsg
@@ -256,6 +258,8 @@ type VehicleSetAgentParams struct {
 // swagger:route POST /vehicle/{plate_id}/agent Vehicles VehicleSetAgent
 // Set vehicle agent.
 //
+//   Security:
+//       Bearer:
 //
 //   Responses:
 //     default: ErrorMsg
@@ -309,6 +313,8 @@ type DeleteVehicleParams struct {
 // Delete a vehicle.
 //
 //
+//   Security:
+//       Bearer:
 //   Responses:
 //     default: ErrorMsg
 //     200: VehicleSuccessVehicleResponse
@@ -353,6 +359,9 @@ type CreateNewGroupParams struct {
 
 // swagger:route POST /vehicle/group/ Vehicles CreateNewGroup
 // Create a new vehicle group.
+//
+//   Security:
+//       Bearer:
 //
 //
 //   Responses:
